...
        android:layout_height="0dp" />

    <include layout="@layout/fragment_no_posts"
        android:id="@+id/no_posts"
        android:layout_width="301dp"
        android:layout_height="484dp"
        app:layout_constraintBottom_toTopOf="@+id/create_new_post"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/posts_list_recyclerview"
        app:layout_constraintVertical_bias="0.514"
        />

...
